5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1828_1657.log
== SUBMITION (2019-06-12 14:42:18) 
-- CODE:
from numpy import*

string = input(" ")
string = string.split(" , ")
v = zeros(5, dtype = int)

for i in string:
	if i == "AZ":
		V[0]+1 = 0
	elif i == "CA" :
		v[1]+1=0
	elif i == "FL":
		v[2]+1=0
	elif i == "PA":
		V[3]+1=0
	elif i == "WI":
		v[4]+1=0
print(v.max())
print(v)
-- EXECUTION TIME:
0.549609
-- ERROR:
  File "/home/codebench/codes/1828/1657/main.py", line 17
    v[4]+1=0
     ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:20) 
-- CODE:
from numpy import*

string = input(" ")
string = string.split(" , ")
v = zeros(5, dtype = int)

for i in string:
	if i == "AZ":
		V[0]+1 = 0
	elif i == "CA" :
		v[1]+1=0
	elif i == "FL":
		v[2]+1=0
	elif i == "PA":
		V[3]+1=0
	elif i == "WI":
		v[4]+1=0
print(v.max())
print(v)
-- ERROR:
File "XXXX", line 17
    v[4]+1=0
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:46) 
-- CODE:
from numpy import*

string = input(" ")
string = string.split(" , ")
v = zeros(5, dtype = int)

for i in string:
	if i == "AZ":
		V[0]+1 = 0
	elif i == "CA" :
		v[1]+1=0
	elif i == "FL":
		v[2]+1=0
	elif i == "PA":
		V[3]+1=0
	elif i == "WI":
		v[4] = v[4] + 1
print(v.max())
print(v)
-- ERROR:
File "XXXX", line 15
    V[3]+1=0
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:43:22) 
-- CODE:
from numpy import*

string = input(" ")
string = string.split(" , ")
v = zeros(5, dtype = int)

for i in string:
	if i == "AZ":
		V[0] = v[0] + 1
	elif i == "CA" :
		v[1] = v[1] + 1
	elif i == "FL":
		v[2] = v[2] + 1
	elif i == "PA":
		V[3] = v[3] + 1
	elif i == "WI":
		v[4] = v[4] + 1
print(v.max())
print(v)
-- EXECUTION TIME:
1.21117
-- TEST CASE 1:
---- input:
FL,AZ,CA,CA,CA,CA,CA
---- correct output:
5
[1 5 1 0 0]
---- user output:
0
[0 0 0 0 0]
-- TEST CASE 2:
---- input:
FL,CA,WI,FL,WI,AZ,PA,WI,FL,PA
---- correct output:
3
[1 1 3 2 3]
---- user output:
0
[0 0 0 0 0]
-- TEST CASE 3:
---- input:
AZ,CA,AZ,WI,CA,AZ,PA,PA,FL,FL,CA,PA,AZ,FL,FL,PA,PA,PA,CA,FL,AZ,CA,PA
---- correct output:
7
[5 5 5 7 1]
---- user output:
0
[0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:23) 
-- CODE:
from numpy import*

string = input(" ")
string = string.split(" , ")
v = zeros(5, dtype = int)

for i in string:
	if i == "AZ":
		V[0] = v[0] + 1
	elif i == "CA" :
		v[1] = v[1] + 1
	elif i == "FL":
		v[2] = v[2] + 1
	elif i == "PA":
		V[3] = v[3] + 1
	elif i == "WI":
		v[4] = v[4] + 1
print(v.max())
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:44:05) 
-- CODE:
from numpy import*
string = input(" ")
string = string.split(",")
v = zeros(5, dtype = int)

for i in string:
	if i == "AZ":
		V[0] = v[0] + 1
	elif i == "CA" :
		v[1] = v[1] + 1
	elif i == "FL":
		v[2] = v[2] + 1
	elif i == "PA":
		V[3] = v[3] + 1
	elif i == "WI":
		v[4] = v[4] + 1
print(v.max())
print(v)
-- EXECUTION TIME:
1.00485
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1657/main.py", line 8, in <module>
    V[0] = v[0] + 1
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:44:29) 
-- CODE:
from numpy import*

string = input(" ")
string = string.split(",")
v = zeros(5, dtype = int)

for i in string:
	if i == "AZ":
		V[0] = v[0] + 1
	elif i == "CA" :
		v[1] = v[1] + 1
	elif i == "FL":
		v[2] = v[2] + 1
	elif i == "PA":
		V[3] = v[3] + 1
	elif i == "WI":
		v[4] = v[4] + 1
print(v.max())
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:44:30) 
-- CODE:
from numpy import*

string = input(" ")
string = string.split(",")
v = zeros(5, dtype = int)

for i in string:
	if i == "AZ":
		V[0] = v[0] + 1
	elif i == "CA" :
		v[1] = v[1] + 1
	elif i == "FL":
		v[2] = v[2] + 1
	elif i == "PA":
		V[3] = v[3] + 1
	elif i == "WI":
		v[4] = v[4] + 1
print(v.max())
print(v)
-- EXECUTION TIME:
0.915505
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1657/main.py", line 9, in <module>
    V[0] = v[0] + 1
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:44:34) 
-- CODE:
from numpy import*

string = input(" ")
string = string.split(",")
v = zeros(5, dtype = int)

for i in string:
	if i == "AZ":
		V[0] = v[0] + 1
	elif i == "CA" :
		v[1] = v[1] + 1
	elif i == "FL":
		v[2] = v[2] + 1
	elif i == "PA":
		V[3] = v[3] + 1
	elif i == "WI":
		v[4] = v[4] + 1
print(v.max())
print(v)
-- EXECUTION TIME:
1.21085
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1657/main.py", line 9, in <module>
    V[0] = v[0] + 1
NameError: name 'V' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
